# pico-cec

./: AGENTS.md  README.md  install.sh
docs/: DEBUGGING.md  WIRING_AND_SETUP.md
firmware/: CMakeLists.txt  cec_transceiver.c  cec_transceiver.h  main.c  ws2812.c  ws2812.h  ws2812.pio
systemd/: 49-pico-cec-suspend.rules  50-pico-cec.sh  99-pico-cec.rules  pico-cec-boot.service  pico-cec-listener.service  pico-cec-shutdown.service  pico-cec-suspend.service
